# alg-welcome

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PKGBUILD  README.md  TODO.md  alg-welcome.desktop  app.go  build.sh  cleanup.sh  go.mod  main.go  main.py  requirements.txt  run.py  styles.css  styles.qss  wails.json
.github/workflows/: release.yml
LinuxBuild/: alg-welcome.desktop  welcome.desktop
PKGBUILD/: PKGBUILD  alg-welcome-1.0.0-2-x86_64.pkg.tar.zst  cleanup.sh
assets/: welcome.desktop
frontend/: index.html  package-lock.json  package.json  package.json.md5
frontend/src/: App.tsx  globals.css  main.tsx
frontend/src/components/: AboutUs.tsx  CountrySelectionScreen.tsx  FAQ.tsx  Logger.tsx  WelcomeScreen.tsx
frontend/src/components/ui/: modal.tsx
frontend/src/lib/: LogsContext.tsx
frontend/wailsjs/go/main/: App.d.ts  App.js
screens/: FirstScreen.go  SecondScreen.go  ThirdScreen.go
src/: WelcomeWindow.cpp  WelcomeWindow.h  main.cpp  version.h
src/dialogs/: AboutUsDialog.cpp  AboutUsDialog.h  MirrorListDialog.cpp  MirrorListDialog.h
src/utils/: Autostart.cpp  Autostart.h  Extras.cpp  Extras.h  Logger.h  Resolution.cpp  Resolution.h  Themes.cpp  Themes.h  Updates.cpp  Updates.h
tests/: calamares_status.cpp  calamares_status.py
utils/: CheckTheme.go  __init__.py  aboutus.go  aboutus.py  autostart.go  autostart.py  autostart_manager.py  createPaginationDots.go  extras.go  extras.py  mirrorlist.go  mirrorlist.py  resolution.go  resolution.py  system_utils.py  theme_manager.py  themes.go  themes.py  updatePaginationDots.go  updates.go  updates.py
